# cmake_test

./: CMakeLists.txt  main.cc
MathFunctions/: CMakeCache.txt  CMakeLists.txt  Makefile  add.cc  cmake_install.cmake
cmake/: FindMYMATH.cmake
